--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.63</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.67</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -342,9 +342,10 @@
         <div id="canvas-help" class="canvas-help text-[10px] text-vectura-muted pointer-events-none">
           <p>PAN: Shift + Drag</p>
           <p>ZOOM: Mouse Wheel</p>
-          <p>TOOLS: V Select • A Direct • P Pen • C Scissor • Space Hand</p>
+          <p>TOOLS: V Select • A Direct • P Pen • C Scissor • Space Hand (press V/C to cycle)</p>
           <p>GROUP: Cmd/Ctrl + G</p>
           <p>EXPAND: Cmd/Ctrl + E</p>
+          <p>DUPLICATE: Cmd/Ctrl + D (Alt/Option + D fallback)</p>
           <p>?: Keyboard Shortcuts</p>
         </div>
       </section>
