--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <button id="btn-settings" class="hover:text-vectura-accent transition-colors text-xs" type="button">
           [SETTINGS]
         </button>
+        <button id="btn-petal-designer" class="hover:text-vectura-accent transition-colors text-xs" type="button">
+          [PETAL DESIGNER]
+        </button>
         <button id="btn-reset-view" class="hover:text-vectura-accent transition-colors text-xs" type="button">
           [RESET VIEW]
         </button>
@@ -81,7 +84,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.67</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.69</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -248,22 +251,56 @@
               />
             </svg>
           </button>
-          <button class="tool-btn" data-tool="pen" type="button" aria-label="Pen Tool (P)" title="Pen (P)">
-            <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
-              <path
-                d="M12 2.2L20.2 10.2L14.8 21.8H9.2L3.8 10.2Z"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="1.6"
-                stroke-linejoin="round"
-              />
-              <circle cx="12" cy="11.6" r="1.7" fill="currentColor" />
-              <path d="M9.5 16.2L12 18.3L14.5 16.2" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" />
-              <line x1="5" y1="20.5" x2="19" y2="20.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" />
-              <circle cx="5" cy="20.5" r="1.3" fill="currentColor" />
-              <circle cx="19" cy="20.5" r="1.3" fill="currentColor" />
-            </svg>
-          </button>
+          <div class="tool-group">
+            <button class="tool-btn" data-tool="pen" type="button" aria-label="Pen Tool (P)" title="Pen (P)">
+              <svg class="tool-icon" viewBox="0 0 24 24" aria-hidden="true">
+                <path
+                  d="M12 2.2L20.2 10.2L14.8 21.8H9.2L3.8 10.2Z"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linejoin="round"
+                />
+                <circle cx="12" cy="11.6" r="1.7" fill="currentColor" />
+                <path d="M9.5 16.2L12 18.3L14.5 16.2" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" />
+                <line x1="5" y1="20.5" x2="19" y2="20.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" />
+                <circle cx="5" cy="20.5" r="1.3" fill="currentColor" />
+                <circle cx="19" cy="20.5" r="1.3" fill="currentColor" />
+              </svg>
+            </button>
+            <div class="tool-submenu" data-menu="pen" aria-label="Pen subtools">
+              <button class="tool-sub-btn" data-pen="draw" type="button" title="Pen Tool (P)">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path
+                    d="M12 2.2L20.2 10.2L14.8 21.8H9.2L3.8 10.2Z"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="1.6"
+                    stroke-linejoin="round"
+                  />
+                  <circle cx="12" cy="11.6" r="1.6" fill="currentColor" />
+                </svg>
+              </button>
+              <button class="tool-sub-btn" data-pen="add" type="button" title="Add Anchor Point (+)">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M5 12h14M12 5v14" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                  <circle cx="12" cy="12" r="8" fill="none" stroke="currentColor" stroke-width="1.4" />
+                </svg>
+              </button>
+              <button class="tool-sub-btn" data-pen="delete" type="button" title="Delete Anchor Point (-)">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M6 12h12" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                  <circle cx="12" cy="12" r="8" fill="none" stroke="currentColor" stroke-width="1.4" />
+                </svg>
+              </button>
+              <button class="tool-sub-btn" data-pen="anchor" type="button" title="Anchor Point Tool (Shift + C)">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <circle cx="12" cy="12" r="2" fill="currentColor" />
+                  <path d="M3.5 12h5M15.5 12h5M12 3.5v5M12 15.5v5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" />
+                </svg>
+              </button>
+            </div>
+          </div>
           <div class="tool-divider"></div>
           <div class="tool-group">
             <button class="tool-btn" data-tool="scissor" type="button" aria-label="Scissor Tool (C)" title="Scissor (C)">
@@ -342,10 +379,11 @@
         <div id="canvas-help" class="canvas-help text-[10px] text-vectura-muted pointer-events-none">
           <p>PAN: Shift + Drag</p>
           <p>ZOOM: Mouse Wheel</p>
-          <p>TOOLS: V Select • A Direct • P Pen • C Scissor • Space Hand (press V/C to cycle)</p>
+          <p>TOOLS: V Select • A Direct • P Pen • + Add Anchor • - Delete Anchor • Shift+C Anchor • C Scissor • Space Hand</p>
           <p>GROUP: Cmd/Ctrl + G</p>
           <p>EXPAND: Cmd/Ctrl + E</p>
           <p>DUPLICATE: Cmd/Ctrl + D (Alt/Option + D fallback)</p>
+          <p>PETAL DESIGNER: [PETAL DESIGNER] (Petalis/Petalis Designer layers)</p>
           <p>?: Keyboard Shortcuts</p>
         </div>
       </section>
@@ -411,7 +449,7 @@
               <div id="auto-colorization-body" class="global-section-body" style="display: none;">
                 <div class="control-group border-none pb-0 mb-0">
                   <div class="flex items-center justify-between mb-3">
-                    <label class="control-label mb-0">Enable</label>
+                    <label class="control-label mb-0">Continuously Apply Changes</label>
                     <input id="auto-colorization-enabled" type="checkbox" class="cursor-pointer" />
                   </div>
                   <label class="control-label">Scope</label>
@@ -428,6 +466,15 @@
                     id="auto-colorization-mode"
                     class="w-full bg-vectura-bg border border-vectura-border p-2 text-xs focus:outline-none focus:border-vectura-accent"
                   ></select>
+                  <div class="mt-3 flex items-center justify-end">
+                    <button
+                      id="auto-colorization-apply"
+                      type="button"
+                      class="text-xs border border-vectura-border px-2 py-1 hover:bg-vectura-border text-vectura-accent transition-colors"
+                    >
+                      Apply
+                    </button>
+                  </div>
                   <div id="auto-colorization-params" class="mt-3"></div>
                 </div>
               </div>
@@ -578,6 +625,12 @@
                   <input type="checkbox" id="set-canvas-help" class="cursor-pointer" />
                 </div>
               </div>
+              <div class="mt-2">
+                <div class="flex items-center justify-between">
+                  <label class="text-xs text-vectura-muted">Save Preferences in Cookie</label>
+                  <input type="checkbox" id="set-cookie-preferences" class="cursor-pointer" />
+                </div>
+              </div>
               <div class="mt-4">
                 <div class="flex items-center justify-between mb-2">
                   <label class="text-xs text-vectura-muted">Selection Outline</label>
@@ -678,6 +731,21 @@
     <script src="./src/core/rng.js" defer></script>
     <script src="./src/core/noise.js" defer></script>
     <script src="./src/core/algorithms/petalis.js" defer></script>
+    <script src="./src/core/algorithms/flowfield.js" defer></script>
+    <script src="./src/core/algorithms/boids.js" defer></script>
+    <script src="./src/core/algorithms/attractor.js" defer></script>
+    <script src="./src/core/algorithms/hyphae.js" defer></script>
+    <script src="./src/core/algorithms/shapepack.js" defer></script>
+    <script src="./src/core/algorithms/lissajous.js" defer></script>
+    <script src="./src/core/algorithms/harmonograph.js" defer></script>
+    <script src="./src/core/algorithms/wavetable.js" defer></script>
+    <script src="./src/core/algorithms/rings.js" defer></script>
+    <script src="./src/core/algorithms/topo.js" defer></script>
+    <script src="./src/core/algorithms/rainfall.js" defer></script>
+    <script src="./src/core/algorithms/spiral.js" defer></script>
+    <script src="./src/core/algorithms/grid.js" defer></script>
+    <script src="./src/core/algorithms/phylla.js" defer></script>
+    <script src="./src/core/algorithms/petalisdesigner.js" defer></script>
     <script src="./src/core/algorithms/index.js" defer></script>
     <script src="./src/core/layer.js" defer></script>
     <script src="./src/core/engine.js" defer></script>
