Add harmonograph anti-loop plotter preview

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <aside id="left-pane" class="pane pane-left bg-vectura-panel border-r border-vectura-border flex flex-col z-10 shadow-xl">
         <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
           <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
-          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.69</span>
+          <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.70</span>
           <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button" aria-label="Toggle left pane">
             ◀
           </button>
@@ -383,6 +383,7 @@
           <p>GROUP: Cmd/Ctrl + G</p>
           <p>EXPAND: Cmd/Ctrl + E</p>
           <p>DUPLICATE: Cmd/Ctrl + D (Alt/Option + D fallback)</p>
+          <p>HARMONOGRAPH: Virtual plotter playhead + loop-stop snaps in controls</p>
           <p>PETAL DESIGNER: [PETAL DESIGNER] (Petalis/Petalis Designer layers)</p>
           <p>?: Keyboard Shortcuts</p>
         </div>
