--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
         <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
 
-        <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.73</span>
+        <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.74</span>
 
         <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button"
           aria-label="Toggle left pane">
@@ -115,16 +115,8 @@
                 </div>
                 <p id="algo-desc" class="text-xs text-vectura-muted leading-relaxed">...</p>
               </div>
-            </div>
-          </div>
-
-          <div id="left-section-transform-seed" class="left-panel-section">
-            <button id="left-section-transform-seed-header" class="left-panel-section-header" type="button">
-              <span class="left-panel-section-title" id="transform-label">Transform &amp; Seed</span>
-              <span class="left-panel-section-toggle" aria-hidden="true"></span>
-            </button>
-            <div id="left-section-transform-seed-body" class="left-panel-section-body">
-              <div class="control-group border-none p-0 m-0">
+              <div class="control-group border-none p-0 m-0 mt-4">
+                <label class="control-label" id="transform-label">Transform &amp; Seed</label>
                 <div class="grid grid-cols-2 gap-2 mb-2" id="seed-controls">
                   <div>
                     <label class="text-[10px] text-vectura-muted">Seed</label>
