--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
         <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
 
-        <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.96</span>
+        <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.97</span>
 
         <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button"
           aria-label="Toggle left pane">
@@ -399,8 +399,9 @@
       </div>
 
       <div class="pane-body flex-1 flex flex-col relative overflow-hidden">
-        <div class="flex-1 overflow-y-auto p-4 relative" id="layer-list"></div>
-        <div class="p-4 border-t border-vectura-border bg-vectura-panel">
+        <div class="right-panel-section right-panel-section-primary right-panel-section-scroll flex-1 overflow-y-auto p-4 relative"
+          id="layer-list"></div>
+        <div class="right-panel-section right-panel-section-scroll p-4 border-t border-vectura-border bg-vectura-panel">
           <div class="flex items-center justify-between mb-2">
             <div class="flex items-center gap-2">
               <span class="pane-title font-bold text-vectura-accent text-xs">PENS</span>
@@ -424,7 +425,7 @@
           <div id="pen-list" class="pen-list"></div>
         </div>
 
-        <div class="p-4 border-t border-vectura-border bg-vectura-panel">
+        <div class="right-panel-section right-panel-section-scroll p-4 border-t border-vectura-border bg-vectura-panel">
           <div id="auto-colorization-section" class="global-section collapsed">
             <button id="auto-colorization-header" class="global-section-header" type="button">
               <span class="global-section-title">Auto-Colorization</span>
@@ -458,7 +459,7 @@
           </div>
         </div>
 
-        <div class="p-4 border-t border-vectura-border bg-vectura-bg z-20 relative">
+        <div class="right-panel-section right-panel-section-scroll p-4 border-t border-vectura-border bg-vectura-bg z-20 relative">
           <div class="flex items-center justify-between mb-2">
             <label id="label-bg-color" class="text-xs text-vectura-muted" for="inp-bg-color">Background</label>
             <div
@@ -468,7 +469,7 @@
           </div>
         </div>
 
-        <div class="p-4 border-t border-vectura-border bg-vectura-bg z-20 relative">
+        <div class="right-panel-section right-panel-section-scroll p-4 border-t border-vectura-border bg-vectura-bg z-20 relative">
           <label class="control-label">Estimation</label>
           <div class="grid grid-cols-2 gap-2 text-xs">
             <div class="text-vectura-muted">Distance:</div>
