Add collapsible pens panel and auto-colorization fixes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
         <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
 
-        <span class="pane-meta text-[10px] text-vectura-muted">V.0.5.99</span>
+        <span class="pane-meta text-[10px] text-vectura-muted">V.0.6.00</span>
 
         <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button"
           aria-label="Toggle left pane">
@@ -399,27 +399,34 @@
         <div class="right-panel-section right-panel-section-primary right-panel-section-scroll flex-1 overflow-y-auto p-4 relative"
           id="layer-list"></div>
         <div id="pens-section" class="right-panel-section right-panel-section-scroll p-4 border-t border-vectura-border bg-vectura-panel">
-          <div class="flex items-center justify-between mb-2">
-            <div class="flex items-center gap-2">
-              <span class="pane-title font-bold text-vectura-accent text-xs">PENS</span>
-              <div class="palette-select relative">
-                <button id="palette-toggle" class="palette-toggle" type="button" aria-label="Select palette"
-                  title="Select palette">
-                  Blues-01
-                </button>
-                <div id="palette-menu" class="palette-menu hidden">
-                  <input id="palette-search" class="palette-search" type="text" placeholder="Search palettes..." />
-                  <div id="palette-options" class="palette-options"></div>
-                </div>
-              </div>
-            </div>
-            <button id="btn-add-pen"
-              class="text-[10px] border border-vectura-border px-2 py-1 hover:bg-vectura-border text-vectura-accent transition-colors"
-              type="button" title="Add pen">
-              + ADD
+          <div id="pens-global-section" class="global-section">
+            <button id="pens-section-header" class="global-section-header" type="button">
+              <span class="global-section-title">Pens</span>
+              <span class="global-section-toggle" aria-hidden="true"></span>
             </button>
+            <div id="pens-section-body" class="global-section-body">
+              <div class="flex items-center justify-between mb-2">
+                <div class="flex items-center gap-2">
+                  <div class="palette-select relative">
+                    <button id="palette-toggle" class="palette-toggle" type="button" aria-label="Select palette"
+                      title="Select palette">
+                      Blues-01
+                    </button>
+                    <div id="palette-menu" class="palette-menu hidden">
+                      <input id="palette-search" class="palette-search" type="text" placeholder="Search palettes..." />
+                      <div id="palette-options" class="palette-options"></div>
+                    </div>
+                  </div>
+                </div>
+                <button id="btn-add-pen"
+                  class="text-[10px] border border-vectura-border px-2 py-1 hover:bg-vectura-border text-vectura-accent transition-colors"
+                  type="button" title="Add pen">
+                  + ADD
+                </button>
+              </div>
+              <div id="pen-list" class="pen-list"></div>
+            </div>
           </div>
-          <div id="pen-list" class="pen-list"></div>
         </div>
 
         <div class="right-panel-section right-panel-section-scroll p-4 border-t border-vectura-border bg-vectura-panel">
