--- a/index.html
+++ b/index.html
@@ -49,29 +49,43 @@
       </div>
       <div class="text-xs text-vectura-muted" id="status-bar" role="status" aria-live="polite">READY</div>
     </div>
-    <div id="top-actions" class="flex gap-4 pt-2">
-      <button id="btn-help" class="hover:text-vectura-accent transition-colors text-xs" type="button">
-        [HELP]
-      </button>
-      <button id="btn-settings" class="hover:text-vectura-accent transition-colors text-xs" type="button">
-        [SETTINGS]
-      </button>
-      <button id="btn-reset-view" class="hover:text-vectura-accent transition-colors text-xs" type="button">
-        [RESET VIEW]
-      </button>
-      <button id="btn-open-vectura" class="hover:text-vectura-accent transition-colors text-xs" type="button">
-        [OPEN]
-      </button>
-      <button id="btn-save-vectura" class="hover:text-vectura-accent transition-colors text-xs" type="button">
-        [SAVE]
-      </button>
-      <button id="btn-import-svg" class="hover:text-vectura-accent transition-colors text-xs" type="button">
-        [IMPORT SVG]
-      </button>
-      <button id="btn-export" class="hover:text-vectura-accent transition-colors text-xs font-bold" type="button">
-        [EXPORT SVG]
-      </button>
-    </div>
+    <nav id="top-menubar" class="top-menubar pt-2" role="menubar" aria-label="Main menu">
+      <div class="top-menu" data-top-menu>
+        <button class="top-menu-trigger" type="button" data-top-menu-trigger aria-haspopup="true" aria-expanded="false">
+          File
+        </button>
+        <div class="top-menu-panel" data-top-menu-panel role="menu" aria-label="File menu">
+          <button id="btn-open-vectura" class="top-menu-item" type="button" role="menuitem">Open Project…</button>
+          <button id="btn-save-vectura" class="top-menu-item" type="button" role="menuitem">Save Project…</button>
+          <button id="btn-import-svg" class="top-menu-item" type="button" role="menuitem">Import SVG…</button>
+          <button id="btn-export" class="top-menu-item top-menu-item-primary" type="button" role="menuitem">Export SVG…</button>
+        </div>
+      </div>
+      <div class="top-menu" data-top-menu>
+        <button class="top-menu-trigger" type="button" data-top-menu-trigger aria-haspopup="true" aria-expanded="false">
+          Edit
+        </button>
+        <div class="top-menu-panel" data-top-menu-panel role="menu" aria-label="Edit menu">
+          <button id="btn-settings" class="top-menu-item" type="button" role="menuitem">Settings</button>
+        </div>
+      </div>
+      <div class="top-menu" data-top-menu>
+        <button class="top-menu-trigger" type="button" data-top-menu-trigger aria-haspopup="true" aria-expanded="false">
+          View
+        </button>
+        <div class="top-menu-panel" data-top-menu-panel role="menu" aria-label="View menu">
+          <button id="btn-reset-view" class="top-menu-item" type="button" role="menuitem">Reset View</button>
+        </div>
+      </div>
+      <div class="top-menu" data-top-menu>
+        <button class="top-menu-trigger" type="button" data-top-menu-trigger aria-haspopup="true" aria-expanded="false">
+          Help
+        </button>
+        <div class="top-menu-panel" data-top-menu-panel role="menu" aria-label="Help menu">
+          <button id="btn-help" class="top-menu-item" type="button" role="menuitem">Help Guide</button>
+        </div>
+      </div>
+    </nav>
   </header>
   <input id="file-open-vectura" type="file" accept=".vectura,application/json" class="hidden" />
   <input id="file-import-svg" type="file" accept=".svg,image/svg+xml" class="hidden" />
@@ -82,7 +96,7 @@
       <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
         <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
 
-        <span class="pane-meta text-[10px] text-vectura-muted">V.0.6.00</span>
+        <span class="pane-meta text-[10px] text-vectura-muted">V.0.6.01</span>
 
         <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button"
           aria-label="Toggle left pane">
