Fix menu behavior

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <h1 class="font-bold tracking-widest text-vectura-accent whitespace-nowrap">
           VECTURA<span class="font-light text-vectura-muted">.STUDIO</span>
         </h1>
+        <div class="header-menu-divider" aria-hidden="true"></div>
         <nav id="top-menubar" class="top-menubar" role="menubar" aria-label="Main menu">
           <div class="top-menu" data-top-menu>
             <button class="top-menu-trigger" type="button" data-top-menu-trigger aria-haspopup="true" aria-expanded="false">
@@ -117,7 +118,7 @@
       <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
         <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
 
-        <span class="pane-meta text-[10px] text-vectura-muted">V.0.6.02</span>
+        <span class="pane-meta text-[10px] text-vectura-muted">V.0.6.03</span>
 
         <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button"
           aria-label="Toggle left pane">
