--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="pane-header pane-header-left p-4 border-b border-vectura-border flex justify-between items-center">
         <span class="pane-title font-bold text-vectura-accent">GENERATOR</span>
 
-        <span class="pane-meta text-[10px] text-vectura-muted">V.0.6.11</span>
+        <span class="pane-meta text-[10px] text-vectura-muted">V.0.6.12</span>
 
         <button id="btn-pane-toggle-left" class="pane-toggle pane-toggle-left" type="button"
           aria-label="Toggle left pane">
@@ -687,6 +687,7 @@
   <script src="./src/config/palettes.js" defer></script>
   <script src="./src/config/presets.js" defer></script>
   <script src="./src/config/descriptions.js" defer></script>
+  <script src="./src/config/petal-profiles/library.js" defer></script>
   <script src="./src/core/rng.js" defer></script>
   <script src="./src/core/noise.js" defer></script>
   <script src="./src/core/geometry-utils.js" defer></script>
